# fplBot

./: .gitignore  Cargo.toml  README.md  fplbot.db-shm  fplbot.db-wal  todo.md
.sqlx/: query-093c1ba25dda32b21341661a288543c833a9661f51856d90ab7b42c58f8f52c2.json  query-1fd8f5c2b7a0c323769080ec32f908fec7f060c117a82551107506c9134567a1.json  query-d2a5c1be2df60f1baf5fda0e5bb33191cc9431d16df7df9b5e5076d66e2041e4.json  query-d63dd1d9d9e3fc4f382fd7a4f7fd08ea975b0339370d25c8dc679a520770ac63.json
api_docs/: README.md
api_docs/endpoints/: events.md  fixtures.md  leagues.md
api_docs/examples/: integration_examples.md
api_docs/schemas/: response_schemas.md
migrations/: 001_initial.sql  002_gameweek_stats.sql
src/: lib.rs  main.rs
src/bot/: handlers.rs  mod.rs
src/bot/commands/: check_channel_league_id.rs  check_manager_id.rs  check_team.rs  fixtures.rs  league.rs  manager.rs  mod.rs  player.rs  standings.rs  track_fixture.rs  update_channel_league_id.rs  update_manager_id.rs
src/database/: mod.rs  models.rs  service.rs
src/fpl/: client.rs  mod.rs
src/fpl/api/: endpoints.rs  mod.rs  types.rs
src/fpl/models/: fixtures.rs  gameweek.rs  league.rs  manager.rs  mod.rs  player.rs  teams.rs
src/utils/: deserializers.rs  error.rs  mod.rs  type_conversion.rs
tests/: fpl_client_tests.rs  league_tests.rs
